--- a/Quality/Quality/Areas/FinalInspection/Views/Inspection/Measurement.cshtml
+++ b/Quality/Quality/Areas/FinalInspection/Views/Inspection/Measurement.cshtml
@@ -238,16 +238,16 @@
                     productTypeArrList.push(value.Article + ',' +value.ProductType);
                 });
 
-                $.each(articleArrList.filter(onlyUnique), function (index, value) {
+                $.each(jQuery.unique(articleArrList), function (index, value) {
                     articleOption += "<option value=" + value + ">" + value + "</option>";
                 });
 
-                $.each(sizeArrList.filter(onlyUnique), function (index, value) {
+                $.each(jQuery.unique(sizeArrList), function (index, value) {
                     sizeOption += "<option value=" + value + " >" + value.split(',')[1] + "</option>";
                 });
 
-                $.each(productTypeArrList.filter(onlyUnique), function (index, value) {
-                    productTypeOption += "<option value=" + value + ">" + value.split(',')[1]  + "</option>";
+                $.each(jQuery.unique(productTypeArrList), function (index, value) {
+                    productTypeOption += "<option value=" + value + ">" + value.split(',')[1] + "</option>";
                 });
 
                 $("#ViewListArticle").html(articleOption);
