--- a/Quality/Quality/Areas/FinalInspection/Views/Query/Detail.cshtml
+++ b/Quality/Quality/Areas/FinalInspection/Views/Query/Detail.cshtml
@@ -119,7 +119,7 @@
                 <table>
                     <tr>
                         <td>PO#</td>
-                        <td class="valueColor" style="width:20%">@Model.FinalInspection.POID</td>
+                        <td class="valueColor" style="width:20%">@Model.FinalInspection.CustPONO</td>
                         <td style="padding-left:10px;">Style</td>
                         <td class="valueColor" style="width:20%">@Model.StyleID</td>
                         <td>Brand</td>
